--- a/style.css
+++ b/style.css
@@ -22,46 +22,89 @@
 .calc-body .display input {
     text-align: right;
     flex: 1;
-    font-size: 40px;
-    background-color: #2a2c47;
+    font-size: 36px;
+    font-family: 'Lato', sans-serif;
+    background-color: #3f93c7;
     box-shadow: 5px 10px #5cb4f23c;
-    color: aliceblue;
+    color: rgb(5, 23, 39);
     border: none;
     border-radius: 10px;
     margin: 0 10px;
     width: 90%;
     height: 72px;
 }
-.calc-body .inputs {
+/* .calc-body .inputs {
     display: flex;
     justify-content: space-around;
+} */
+.calc-body .inputs {
+    display: grid;
+    /* justify-content: space-around; */
+    grid-template-columns: repeat(4, 25%);
 }
 .calc-body #bottom {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
 .calc-body #bottom input  {
-    width: 165px;
+    width: 153px;
 }
 .inputs .equal-sign {
     width: 250px;
+    background-image: linear-gradient(to top left, #243f2e, rgb(16, 91, 22));
+}
+.inputs .equal-sign:hover {
+    background-image: linear-gradient(to top left, #285a3a, rgb(24, 142, 34));
+}
+.inputs .equal-sign:active {
+    background-image: linear-gradient(to top left, #184d2c, rgb(9, 113, 61));
+}
+.inputs .sign {
+    font-size: 36px;
+}
+.inputs .delete {
+    background-color: red;
+    background-image: linear-gradient(to top left, #4d1b29, rgb(141, 25, 70));
+    color: white;
+}
+.inputs .delete:hover {
+    background-color: rgb(255, 114, 114);
+    background-image: linear-gradient(to top left, #702339, rgb(199, 36, 79));
+}
+.inputs .delete:active {
+    background-image: linear-gradient(to top left, #551426, rgb(145, 18, 86));
 }
 .inputs input{
     background-color: transparent;
+    background-image: linear-gradient(to bottom right, #253657, rgb(28, 46, 96));
     border: transparent;
     border-radius: 10px;
-    box-shadow: 5px 10px #5cb4f23c;
+    box-shadow: 5px 10px #3791d13c;
     color: aliceblue;
     font-family: 'Arial Narrow', sans-serif;
     font-size: 20px;
-    width: 120px;
+    width: 111px;
     height: 60px;
     margin: 10px 0;
 }
 
 .inputs input:hover {
-    background-color: #3c506b;
+    background-color: #5278aa;
+    background-image: linear-gradient(to bottom right, #394f81, rgb(33, 47, 118));
     color: rgb(228, 238, 240);
     cursor: pointer;
     box-shadow: 5px 10px #5cb3f282;
+}
+.inputs input:after {
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    width: calc(100%-4px);
+    height: 50%;
+    background: linear-gradient(rgba(255,255,255, 0.8), rgba(255,255,255,0.2));
+}
+.inputs input:active {
+    background-color: #486c82;
+    background-image: linear-gradient(to top left, #242d3f, rgb(10, 11, 38));
 }
