--- a/Mark I/style.css
+++ b/Mark I/style.css
@@ -11,7 +11,7 @@
     background-color: #22243a;
     border: none;
     border-radius: 25px;
-    box-shadow: 10px 20px #692f95a1;
+    box-shadow: 10px 20px #7c239a83;
     padding: 10px 10px;
 }
 .calc-body .display {
@@ -24,7 +24,7 @@
     flex: 1;
     font-size: 36px;
     font-family: 'Lato', sans-serif;
-    background-color: #3f93c7;
+    background-color: #45d2dc;
     box-shadow: 5px 10px #5cb4f23c;
     color: rgb(5, 23, 39);
     border: none;
