--- a/Mark II/styles.css
+++ b/Mark II/styles.css
@@ -21,18 +21,22 @@ html {
     margin: auto;
     width: 450px;
     height: 855px;
-    border-radius: 10px;
-    background-color: rgb(214, 227, 238);
+    border-radius: 25px;
+    background-color: #7d96ab;
+    background-image: linear-gradient(to bottom,#80abc2, #7d96ab);
 }
 
 .display {
     margin: 15px auto;
     height: 142.5px;
     width: 95%;
-    background-color: white;
-    border-radius: 10px;
+    background-color: #88ffe5f3;
+    background-image: linear-gradient(to top left, #88ffe5f3, #65fcb8);
+    border-radius: 25px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: right;
+    color: #0d4b44cd;
+    box-shadow: 0px 0px 50px 5px #bfffda99;
 }
 .display .top {
     padding-top: 15px;
@@ -48,21 +52,26 @@ html {
 
 .buttons {
     display: grid;
+    grid-template-rows: repeat(5, 1fr);
     align-items: center;
     justify-content: center;
     margin: 50px auto;
-    border-radius: 10px;
+    border-radius: 25px;
     width: 100%;
     height: 660px;
-    background-color: rgb(187, 196, 203);
+    /* background-color: rgba(221, 222, 223, 0.532); */
+    background: linear-gradient(to bottom, #8cb2cb, #577e99 70%, #577e99 75%, #2b4962 95%);
     margin-bottom: 10px;
 }
 
 .row input {
-    background-color: azure;
+    background-color: rgba(247, 251, 255, 0.824);
+    background-image: linear-gradient(to top left, #d3d8df, #f0f0f0);
     width: 100px;
-    height: 120px;
+    height: 100px;
     border: none;
-    border-radius: 10px;
-    font-size: 20px;
+    border-radius: 100px;
+    font-size: 30px;
+    color: #1f222b;
+    box-shadow: 0px 10px 1px 1px #5c6a81dc;
 }
