--- a/Mark II/styles.css
+++ b/Mark II/styles.css
@@ -62,16 +62,17 @@ html {
     /* background-color: rgba(221, 222, 223, 0.532); */
     background: linear-gradient(to bottom, #8cb2cb, #577e99 70%, #577e99 75%, #2b4962 95%);
     margin-bottom: 10px;
+    box-shadow: 0px 15px 1px #3f4b5e9f;
 }
 
 .row input {
     background-color: rgba(247, 251, 255, 0.824);
-    background-image: linear-gradient(to top left, #d3d8df, #f0f0f0);
+    background-image: linear-gradient(to bottom, #d9f4f6, #84b6d9);
     width: 100px;
     height: 100px;
     border: none;
     border-radius: 100px;
     font-size: 30px;
     color: #1f222b;
-    box-shadow: 0px 10px 1px 1px #5c6a81dc;
+    box-shadow: 0px 10px 1px 1px #3f4b5edc;
 }
