--- a/Mark II/styles.css
+++ b/Mark II/styles.css
@@ -62,7 +62,7 @@ html {
     /* background-color: rgba(221, 222, 223, 0.532); */
     background: linear-gradient(to bottom, #8cb2cb, #577e99 70%, #577e99 75%, #2b4962 95%);
     margin-bottom: 10px;
-    box-shadow: 0px 15px 1px #3f4b5e9f;
+    box-shadow: 0px 6px 1px #3f4b5e9f;
 }
 
 .row input {
@@ -74,5 +74,27 @@ html {
     border-radius: 100px;
     font-size: 30px;
     color: #1f222b;
-    box-shadow: 0px 10px 1px 1px #3f4b5edc;
+    box-shadow: 0px 5px 1px 1px #3f4b5edc;
+}
+
+.row .number:hover {
+    background-image: linear-gradient(to bottom, #e0f9fa, #aedeee);
+}
+.row .sign {
+    background-image: linear-gradient(to bottom, #8d969b, #727e9b);;
+}
+.row .sign:hover{
+    background-image: linear-gradient(to bottom, #b8cdd1, #7ca3b9);;
+}
+.row #equal-sign {
+    background-image: linear-gradient(to bottom, #90ffc0, #68b868);
+}
+.row #equal-sign:hover {
+    background-image: linear-gradient(to bottom, #b0fef5, #77e3c4);
+}
+.row .deletes {
+    background-image: linear-gradient(to bottom, #ff9090, #973c4e);
+}
+.row .deletes:hover {
+    background-image: linear-gradient(to bottom, #fe9380, #bb404b);
 }
