--- a/Mark II/styles.css
+++ b/Mark II/styles.css
@@ -35,7 +35,7 @@ html {
     border-radius: 25px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: right;
-    color: #0d4b44cd;
+    color: #0f574fcd;
     box-shadow: 0px 0px 50px 5px #bfffda99;
 }
 .display .top {
@@ -73,7 +73,7 @@ html {
     border: none;
     border-radius: 100px;
     font-size: 30px;
-    color: #1f222b;
+    color: #313d5d;
     box-shadow: 0px 5px 1px 1px #3f4b5edc;
 }
 
@@ -81,23 +81,45 @@ html {
     background-color: #e0f7ff;
     background-image: linear-gradient(to bottom, #e0f9fa, #aedeee);
 }
+
+.row .number:active {
+    background-color: #b8c8de;
+    background-image: linear-gradient(to bottom, #bfdae1, #7ca5c8);
+}
 .row .sign {
     background-color: #98dbdd;
-    background-image: linear-gradient(to bottom, #8d969b, #727e9b);;
+    background-image: linear-gradient(to bottom, #9aacb5, #8495bc);;
 }
 .row .sign:hover{
     background-color: #c5f1f3;
-    background-image: linear-gradient(to bottom, #c7e1e7, #a1cae1);;
+    background-image: linear-gradient(to bottom, #a9d6e0, #83b2cd);;
+}
+
+.row .sign:active {
+    background-color: #679bb1;
+    background-image: linear-gradient(to bottom, #7b8fa4, #767eb1);;
 }
 .row #equal-sign {
+    background-color: #68b868;
     background-image: linear-gradient(to bottom, #90ffc0, #68b868);
 }
 .row #equal-sign:hover {
+    background-color: #77e3c4;
     background-image: linear-gradient(to bottom, #b0fef5, #77e3c4);
 }
+.row #equal-sign:active {
+    background-color: #3f854f;
+    background-image: linear-gradient(to bottom, #63dbb5, #43935e);
+}
 .row .deletes {
+    background-color: #ff9090;
     background-image: linear-gradient(to bottom, #ff9090, #973c4e);
 }
 .row .deletes:hover {
-    background-image: linear-gradient(to bottom, #fe9380, #bb404b);
+    background-color: #ffa291;
+    background-image: linear-gradient(to bottom, #ffa291, #d75578);
+}
+.row .deletes:active {
+    background-color: #ce5751;
+    background-image: linear-gradient(to bottom, #c24e4c, #812b3c);
 }
