--- a/Mark II/styles.css
+++ b/Mark II/styles.css
@@ -17,7 +17,6 @@ html {
 
 #calculator {
     display: flex;
-    
     margin: auto;
     width: 450px;
     height: 855px;
@@ -39,14 +38,14 @@ html {
     box-shadow: 0px 0px 50px 5px #bfffda99;
 }
 .display .top {
-    padding-top: 15px;
+    margin-top: 5px;
+    height: 35px;
     margin-right: 15px;
     font-size: 18px;
 }
 .display .bottom {
-    margin-top: 10px;
+    height: 70px;
     margin-right: 15px;
-    padding-top: 15px;
     font-size: 36px;
 }
 
