lightened the buttons div

--- a/Mark II/styles.css
+++ b/Mark II/styles.css
@@ -61,7 +61,7 @@ html {
     width: 100%;
     height: 660px;
     /* background-color: rgba(221, 222, 223, 0.532); */
-    background: linear-gradient(to bottom, #8cb2cb, #577e99 70%, #577e99 75%, #2b4962 95%);
+    background: linear-gradient(to bottom, #94bfdc, #6393b6 70%, #6393b6 75%, #325d80 95%);
     margin-bottom: 10px;
     box-shadow: 0px 6px 1px #3f4b5e9f;
 }
