--- a/HTML,CSS,JS/Mark III/style.css
+++ b/HTML,CSS,JS/Mark III/style.css
@@ -27,10 +27,14 @@ header {
     list-style: none;
 }
 .theme-select {
-    margin-right: 10px;
+    margin-right: 30px;
     font-size: 1.2rem;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
+}
+.theme-select:hover {
+    background-color: black;
+    color: white;
 }
 .calc-body {
     margin-top: 15px;
