--- a/HTML,CSS,JS/Mark III/style.css
+++ b/HTML,CSS,JS/Mark III/style.css
@@ -37,11 +37,40 @@ header {
     color: white;
 }
 .calc-body {
+    display: flex;
+    justify-content: center;
     margin-top: 15px;
     background-color: aliceblue;
-    width: 50%;
-    height: 600px;
+    width: 450px;
+    height: 800px;
     margin: 20px auto 0;
     color: black;
     border-radius: 10px;
+}
+.display{           
+    background-color: black;
+}
+.display .top {
+    height: 60px;
+    text-align: right;
+}
+.display .bottom {
+    height: 80px;
+    text-align: right;
+}
+.buttons {
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    justify-content: space-evenly;
+    align-items: center;
+    width: 420px;
+    height: 640px;
+    margin-top: 5px;
+    background-color: gray;
+    border-radius: 10px;
+}
+
+.buttons .row input {
+    width:95px;
+    height: 120px;
 }
