--- a/HTML,CSS,JS/Mark III/style.css
+++ b/HTML,CSS,JS/Mark III/style.css
@@ -40,7 +40,7 @@ header {
     display: flex;
     justify-content: center;
     margin-top: 15px;
-    background-color: aliceblue;
+    background-color: rgb(1, 8, 14);
     width: 450px;
     height: 800px;
     margin: 20px auto 0;
@@ -49,14 +49,19 @@ header {
 }
 .display{           
     background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 15px;
 }
 .display .top {
-    height: 60px;
+    margin-top: 10px;
+    height: 50px;
     text-align: right;
+    color: gainsboro;
 }
 .display .bottom {
-    height: 80px;
+    height: 60px;
     text-align: right;
+    color: white;
 }
 .buttons {
     display: grid;
@@ -66,11 +71,16 @@ header {
     width: 420px;
     height: 640px;
     margin-top: 5px;
-    background-color: gray;
+    background-color: rgb(7, 11, 21);
     border-radius: 10px;
 }
 
 .buttons .row input {
     width:95px;
     height: 120px;
+    background-color: black;
+    border: none;
+    box-shadow: 1px 1px 5px #e0d3d3;
+    color: aliceblue;
+    font-size: 30px;
 }
