Margin fix for display, 0 text bottom

--- a/HTML,CSS,JS/Mark III/style.css
+++ b/HTML,CSS,JS/Mark III/style.css
@@ -62,6 +62,8 @@ header {
     height: 60px;
     text-align: right;
     color: white;
+    font-size: 40px;
+    margin-right: 5px;
 }
 .buttons {
     display: grid;
