--- a/HTML,CSS,JS/Mark III/styles.css
+++ b/HTML,CSS,JS/Mark III/styles.css
@@ -5,7 +5,7 @@
     --panelColor1: #3498c626;
     --panelColor2: #0c0e1874;
     --panelColor2point5: #38468f0e;
-    --panelColor3: #1e2445ca;
+    --panelColor3: #1d2032b8;
     --panelColor4: #1312174d;
 
     --fontColor1: rgba(93, 211, 234, 0.961);
@@ -15,6 +15,11 @@
     --glowColor1: rgba(61, 210, 230, 0.733);
     --glowColor2: rgba(162, 255, 210, 0.733);
     --glowColor3: rgb(162, 255, 210);
+
+    --image1: url(images/pramod-tiwari--Q8SZ4KIug4-unsplash.jpg);
+    --image2: url(images/dan-cristian-padure-zm1oNbYS7DY-unsplash.jpg);
+    --image3: url(images/s-tsuchiya-3e0yw5MssSU-unsplash.jpg);
+    --image4: url(images/shri-FTDCDqOxTEE-unsplash.jpg);
 }
 html, body {
     width: 100%;
@@ -28,7 +33,7 @@ body{
 
     /*Background properties*/
     background-color: var(--1stbackgroundColor);
-    background-image: url(images/pramod-tiwari--Q8SZ4KIug4-unsplash.jpg);
+    background-image: var(--image1);
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -138,6 +143,11 @@ input:not(:enabled) {
     color: var(--fontColordisabled);
 }
 input:hover:enabled {
+    box-shadow: 0 0 10px 0 var(--glowColor1);
+    color: var(--fontColor2);
+}
+input:active:enabled {
+    background-color: var(--panelColor3);
     box-shadow: 0 0 10px 0 var(--glowColor3);
     color: var(--fontColor2);
 }
