--- a/HTML,CSS,JS/Mark III/styles.css
+++ b/HTML,CSS,JS/Mark III/styles.css
@@ -37,7 +37,30 @@ html, body {
     height: 100%;
 }
 
-
+#nav-bar {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    background-color: var(--2ndbackgroundColor);
+    top: 0;
+    left: 0;
+    color: var(--fontColor1);
+}
+.navbar {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    list-style: none;
+}
+.theme-select {
+    color: var(--fontColor1);
+    font-family: Arial, Helvetica, sans-serif;
+}
 body{
     /*Flex properties*/
     display: flex;
@@ -168,4 +191,7 @@ input:active:enabled {
 }
 .number:hover {
     background-color: var(--panelColor2point5);
+}
+.number:active {
+    background-color: var(--panelColor2);
 }
