--- a/HTML,CSS,JS/Mark III/styles_snow.css
+++ b/HTML,CSS,JS/Mark III/styles_snow.css
@@ -39,7 +39,7 @@ html, body {
 
 #nav-bar {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
     position: absolute;
     width: 100%;
@@ -51,15 +51,48 @@ html, body {
 }
 .navbar {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
     height: 100%;
     list-style: none;
 }
-.theme-select {
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+.dropbtn {
+    font-size: 1.75rem;
+    border: none;
+    outline: none;
+    color: var(--snowfontColor1);
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--snow2ndbackgroundColor);
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px var(--snowglowColor1);
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.themes-list {
     color: var(--snowfontColor1);
     font-family: Arial, Helvetica, sans-serif;
+    list-style: none;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    float: left;
 }
 body{
     /*Flex properties*/
@@ -140,7 +173,7 @@ a top and a bottom level*/
     /*font properties*/
     color: var(--snowfontColor1);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.5rem;
+    font-size: 2.75rem;
     text-align: right;
 }
 #bottomContent {
